<resources>
    <string name="app_name">Organizze</string>

    <string name="sliderFirst">Organize suas contas \n de onde estiver</string>
    <string name="sliderFisrtDescription">Simples, fácil de usar e grátis</string>
    <string name="sliderSecond">Saiba para onde está indo seu dinhero</string>
    <string name="sliderSecondDescription">Categorizando seus lançamentos e \n vendo o destino de cada centavo</string>
    <string name="sliderThird">Nunca mais esqueça de \n pagar uma conta</string>
    <string name="sliderThirdDescription">Receba alertas quando quiser</string>
    <string name="sliderFourth">Tudo organizado, no \n celular ou computador</string>
    <string name="sliderFourthDescription">Use no seu smartphone e acessando o \n Organizze pelo site</string>

    <string name="introRegister">Crie a sua conta grátis</string>
    <string name="introRegisterDescription">Junte-se a mais de meio milhão \n de pessoas e comece já</string>
    <string name="register">CADASTRE-SE</string>
    <string name="hasLogin">Já tenho conta</string>

    <string name="registerNameHint">Nome</string>
    <string name="registerEmailHint">Email</string>
    <string name="registerPasswordHint">Senha</string>
    <string name="registerButton">CADASTRAR</string>
    <string name="registerTerms">Termos de uso</string>

    <string name="loginTitle">Acesse a sua conta</string>
    <string name="loginButton">Entrar</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="exampleMoneyHint">R$ 00.00</string>
    <string name="exampleDataHint">Data</string>
    <string name="exampleCategoryHint">Categoria</string>
    <string name="exampleDescriptionHint">Descrição</string>

    <string name="toolbarHomeTitle">Sair</string>

</resources>
